src/com/zzw/java1000000/z1007964/modifier/Abstract/Test/AbstarctImpl.java
package com.zzw.java1000000.z1007964.modifier.Abstract.Test;

//error
//public class AbstarctImpl extends AbstractDemo{
//
//	@Override
//	public void fun() {
//		// TODO Auto-generated method stub
//		
//	}
//
//	@Override
//	protected void fun2() {
//		// TODO Auto-generated method stub
//		
//	}
//
//}
